--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-switch": "^1.1.2",
+    "@radix-ui/react-toggle": "^1.1.1",
+    "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@reduxjs/toolkit": "^2.5.0",
     "@tanstack/react-table": "^8.20.6",
@@ -30,12 +32,16 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.1",
     "lucide-react": "^0.469.0",
-    "react": "^18.3.1",
+    "react": "^19.0.0",
     "react-day-picker": "8.10.1",
-    "react-dom": "^18.3.1",
+    "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-phone-number-input": "^3.4.11",
     "react-redux": "^9.2.0",
     "react-router": "^7.1.1",
+    "slate": "^0.112.0",
+    "slate-dom": "^0.111.0",
+    "slate-react": "^0.112.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "yup": "^1.6.1",
