--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.1",
+    "escape-html": "^1.0.3",
     "immer": "^10.1.1",
     "lucide-react": "^0.469.0",
     "react": "^19.0.0",
@@ -53,6 +54,7 @@
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@tailwindcss/postcss": "4.0.0",
+    "@types/escape-html": "^1",
     "@types/node": "^22.10.2",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
