--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@reduxjs/toolkit": "^2.5.0",
+    "@tanstack/react-query": "^5.66.0",
     "@tanstack/react-table": "^8.20.6",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
@@ -37,6 +39,7 @@
     "immer": "^10.1.1",
     "lucide-react": "^0.469.0",
     "react": "^19.0.0",
+    "react-aria-components": "^1.6.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
@@ -54,6 +57,7 @@
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@tailwindcss/postcss": "4.0.0",
+    "@tanstack/eslint-plugin-query": "^5.66.0",
     "@types/escape-html": "^1",
     "@types/node": "^22.10.2",
     "@types/react": "^19.0.8",
