--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "escape-html": "^1.0.3",
     "immer": "^10.1.1",
     "lucide-react": "^0.469.0",
+    "motion": "^12.4.7",
     "react": "^19.0.0",
     "react-aria-components": "^1.6.0",
     "react-day-picker": "8.10.1",
