--- a/package.json
+++ b/package.json
@@ -31,10 +31,9 @@
     "@reduxjs/toolkit": "^2.5.0",
     "@tanstack/react-query": "^5.66.0",
     "@tanstack/react-table": "^8.20.6",
-    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cmdk": "1.0.0",
+    "cmdk": "^1.0.4",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.1",
     "escape-html": "^1.0.3",
@@ -43,7 +42,7 @@
     "motion": "^12.4.7",
     "react": "^19.0.0",
     "react-aria-components": "^1.6.0",
-    "react-day-picker": "8.10.1",
+    "react-day-picker": "^9.5.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-phone-number-input": "^3.4.11",
