--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "immer": "^10.1.1",
     "lucide-react": "^0.469.0",
     "motion": "^12.4.7",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-aria-components": "^1.6.0",
     "react-day-picker": "^9.5.1",
@@ -59,6 +60,7 @@
     "slate": "^0.112.0",
     "slate-dom": "^0.111.0",
     "slate-react": "^0.112.1",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "use-immer": "^0.11.0",
