--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
     "@reduxjs/toolkit": "^2.5.0",
     "@tanstack/react-query": "^5.66.0",
     "@tanstack/react-table": "^8.20.6",
@@ -49,6 +51,7 @@
     "lucide-react": "^0.469.0",
     "motion": "^12.4.7",
     "next-themes": "^0.4.6",
+    "pdfjs-dist": "3.4.120",
     "react": "^19.0.0",
     "react-aria-components": "^1.6.0",
     "react-day-picker": "^9.5.1",
