--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "embla-carousel-react": "^8.5.1",
     "escape-html": "^1.0.3",
     "immer": "^10.1.1",
-    "lucide-react": "^0.469.0",
+    "lucide-react": "^0.511.0",
     "motion": "^12.4.7",
     "next-themes": "^0.4.6",
     "pdfjs-dist": "3.4.120",
@@ -60,6 +60,7 @@
     "react-phone-number-input": "^3.4.11",
     "react-redux": "^9.2.0",
     "react-router": "^7.1.1",
+    "recharts": "^2.15.3",
     "slate": "^0.112.0",
     "slate-dom": "^0.111.0",
     "slate-react": "^0.112.1",
